[gd_scene load_steps=3 format=3 uid="uid://cqhn0r8gv56xq"]

[ext_resource type="PackedScene" uid="uid://f82pa8uhgjhx" path="res://scenes/offer.tscn" id="1_72o7b"]
[ext_resource type="Script" path="res://scripts/premium_shop.gd" id="1_wt31g"]

[node name="PremiumShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wt31g")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 854.0
offset_bottom = 378.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Gold" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Gold1" parent="PanelContainer/MarginContainer/VBoxContainer/Gold" instance=ExtResource("1_72o7b")]
layout_mode = 2
metadata/type = "gold"
metadata/amount = 10

[node name="Gold2" parent="PanelContainer/MarginContainer/VBoxContainer/Gold" instance=ExtResource("1_72o7b")]
layout_mode = 2
metadata/type = "gold"
metadata/amount = 20

[node name="Gold3" parent="PanelContainer/MarginContainer/VBoxContainer/Gold" instance=ExtResource("1_72o7b")]
layout_mode = 2
metadata/type = "gold"
metadata/amount = 50

[node name="Diamond" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Diamond1" parent="PanelContainer/MarginContainer/VBoxContainer/Diamond" instance=ExtResource("1_72o7b")]
layout_mode = 2

[node name="Diamond2" parent="PanelContainer/MarginContainer/VBoxContainer/Diamond" instance=ExtResource("1_72o7b")]
layout_mode = 2
metadata/amount = 3

[node name="Diamond3" parent="PanelContainer/MarginContainer/VBoxContainer/Diamond" instance=ExtResource("1_72o7b")]
layout_mode = 2
metadata/amount = 8

[connection signal="purchase" from="PanelContainer/MarginContainer/VBoxContainer/Gold/Gold1" to="." method="_on_gold_1_purchase"]
[connection signal="purchase" from="PanelContainer/MarginContainer/VBoxContainer/Gold/Gold2" to="." method="_on_gold_2_purchase"]
[connection signal="purchase" from="PanelContainer/MarginContainer/VBoxContainer/Gold/Gold3" to="." method="_on_gold_3_purchase"]
[connection signal="purchase" from="PanelContainer/MarginContainer/VBoxContainer/Diamond/Diamond1" to="." method="_on_diamond_1_purchase"]
[connection signal="purchase" from="PanelContainer/MarginContainer/VBoxContainer/Diamond/Diamond2" to="." method="_on_diamond_2_purchase"]
[connection signal="purchase" from="PanelContainer/MarginContainer/VBoxContainer/Diamond/Diamond3" to="." method="_on_diamond_3_purchase"]
